# crime_data/static/swagger.json
@@ -1935,77 +1935,6 @@
         }
       }
     },
-    "/counts": {
-      "get": {
-        "tags": [
-          "trends",
-          "state",
-          "national"
-        ],
-        "description": "Returns counts by year for incidents. Incidents can also be grouped for counting with the `by` parameter, which accepts 1 or more of the following fields in a comma-delimited list: `year`, `month`, `offense_subcat`, `offense_subcat_code`, `offense`, `offense_code`, `offense_category`, `classification`, `state`, `state_name`",
-        "parameters": [
-          {
-            "$ref": "#/parameters/fieldsParam"
-          },
-          {
-            "$ref": "#/parameters/pageParam"
-          },
-          {
-            "$ref": "#/parameters/perPageParam"
-          },
-          {
-            "$ref": "#/parameters/outputParam"
-          },
-          {
-            "$ref": "#/parameters/incidentCountGroupByParam"
-          },
-          {
-            "$ref": "#/parameters/yearParam"
-          },
-          {
-            "$ref": "#/parameters/monthParam"
-          },
-          {
-            "$ref": "#/parameters/stateParam"
-          },
-          {
-            "$ref": "#/parameters/offenseCategoryParam"
-          },
-          {
-            "$ref": "#/parameters/explorerOffenseParam"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "type": "object",
-              "required": [
-                "pagination",
-                "results"
-              ],
-              "properties": {
-                "pagination": {
-                  "$ref": "#/definitions/Pagination"
-                },
-                "results": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/definitions/SummaryCount"
-                  }
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
-          }
-        }
-      }
-    },
     "/participation/national": {
       "get": {
         "tags": [
